--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
 
     compile 'com.google.firebase:firebase-database:11.8.0'
+
+    compile 'com.google.firebase:firebase-firestore:11.8.0'
+
     compile 'com.intuit.sdp:sdp-android:1.0.5'
     compile 'de.hdodenhof:circleimageview:2.2.0'
 
